[package]
name = "untitled"
version = "0.1.0"
edition = "2024"

[dependencies]
# Windows API — memory reading
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_System_Threading",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_System_Diagnostics_Debug",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_Graphics_Gdi",
    "Win32_System_LibraryLoader",
] }

# GUI
eframe  = "0.29"
egui    = "0.29"

# Config serialisation
serde      = { version = "1", features = ["derive"] }
serde_json = "1"

# Subsystem flag so no console window in release builds
[profile.release]
lto = true
opt-level = 3

# Keep a console window in debug
[[bin]]
name = "untitled"
path = "src/main.rs"
